--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "Fr3nzy/loader-ajaxifyjs",
+  "name": "loader-ajaxifyjs",
   "version": "0.9.0",
   "main": "lib/loader.ajaxify.js",
   "ignore": [
